--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/assignment.task?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/assignment.task?useSSL=false&serverTimezone=UTC    <--------add your Mysql Database name this is my Mysql db -> assignment.task
 
-spring.datasource.username=****
-spring.datasource.password=****
+spring.datasource.username=****       <--------add your username
+spring.datasource.password=****       <--------add your password
 
-# Hibernate Configuration
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+# Enable SQL query logging
 spring.jpa.show-sql=true
+
+# Hibernate DDL auto
+spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
