--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/assignment.task?useSSL=false&serverTimezone=UTC    <--------add your Mysql Database name this is my Mysql db -> assignment.task
+spring.datasource.url=jdbc:mysql://localhost:3306/assignment.task?useSSL=false&serverTimezone=UTC    <--add your Mysql Database name this is my Mysql db -> assignment.task
 
 spring.datasource.username=****       <--------add your username
 spring.datasource.password=****       <--------add your password
